# HugEval

./: .gitignore  .pre-commit-config.yaml  README.md  README.me  bert_test.txt  coverage.json  evaluation_20250921_224314_summary.txt  evaluation_20250921_224700_summary.txt  evaluation_20250921_224855_summary.txt  evaluation_20250921_225037_summary.txt  evaluation_20250921_225501_summary.txt  evaluation_20250921_225535_summary.txt  evaluation_20250921_225605_summary.txt  multi_test.txt  project_description.txt  project_requirements.txt  pyproject.toml  run  test_analysis_20250921_222928.jsonl  test_analysis_20250921_222928_summary.txt  test_analysis_20250921_224315_summary.txt  test_analysis_20250921_224701_summary.txt  test_analysis_20250921_225038_summary.txt  test_analysis_20250921_225502_summary.txt  test_analysis_20250921_225536_summary.txt  test_invalid.txt  test_mixed_urls.txt  test_urls.txt  urls.txt
.github/workflows/: ci.yml
acmecli/: determinism.py  io_utils.py  llm_analysis.py  llm_providers.py  logging_cfg.py  main.py  report.py  scoring.py  urls.py
acmecli.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
acmecli/metrics/: base.py  hf_api.py  repo_scan.py
tests/: conftest.py  test_hf_api.py  test_io_utils.py  test_io_utils_extra.py  test_llm_analysis.py  test_llm_coverage.py  test_logging_cfg.py  test_main_cli.py  test_main_coverage.py  test_package_import.py  test_repo_scan_edges.py  test_report.py  test_report_coverage.py  test_scoring.py  test_scoring_clamp.py  test_smoke.py  test_urls.py  test_urls_coverage.py
